--- a/Blockchain/appsettings.json
+++ b/Blockchain/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
+   // "BlockchainContext": "Server=blockchain-sec22-server.postgres.database.azure.com,5432;User Id=vvbrhhjkal;Password={your_password};",
     "BlockchainContext": "Server=(localdb)\\MSSQLLocalDB;Database=blockchain;uid=DESKTOP-V897TNO\\1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
  "AllowedHosts": "*"
