--- a/Blockchain/appsettings.json
+++ b/Blockchain/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-   // "BlockchainContext": "Server=blockchain-sec22-server.postgres.database.azure.com,5432;User Id=vvbrhhjkal;Password={your_password};",
-    "BlockchainContext": "Server=(localdb)\\MSSQLLocalDB;Database=blockchain;uid=DESKTOP-V897TNO\\1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BlockchainContext": "Server=SQL5109.site4now.net;Initial Catalog=db_a8204c_dbsec22;User Id=db_a8204c_dbsec22_admin;Password=Wasd1234",
+    "BlockchainContext2": "Server=(localdb)\\MSSQLLocalDB;Database=blockchain;uid=DESKTOP-V897TNO\\1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
  "AllowedHosts": "*"
 }
